k8s/postgres-deployment.yaml
# Deployment of postgres image
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deloyment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      # Add configuration related to persistent volume claim, sets up requests to Kube to create the Persistent Volume Claim
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim # The name defined in persistent volume claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # This name must be same as volume's name
              mountPath: /var/lib/postgresql/data  # Where inside the container this should be made available
              subPath: postgres
          # Override the default postgres password
