k8s/server-deployment.yaml
# Deployment of server image with 3 client Pods running
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      # These key values can be anything, but just needs to be same across objects
      component: server # With selector and label it will identify the different pods it will manage
  template:
    metadata:
      labels:
        component: server
    spec: # customise the behaviour of each Pod that is created
      containers:
        - name: server
          image: amadasif/multi-server
          ports:
            - containerPort: 5000 # Port mapped up to the multi-server image
