k8s/worker-deployment.yaml
# Deployment of worker image with 1 worker Pods running
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: amadasif/multi-worker # This container doesn't need to be directly connected from outside so doesn't need any Port or Service for this
          # A set of env variables that will be passed on to the container
